style: replace legacy styles with unified mobile-first layout
- Add styles.new.css as the single source of truth
- Mobile: sticky topbar + scrollable nav
- Desktop ≥900px: fixed left sidebar with margin-left push
- Preserve tokens, hero, card grid, footer, and a11y styles

--- a/who-drives.html
+++ b/who-drives.html
@@ -10,7 +10,7 @@
       rel="stylesheet"
     />
     <link href="assets/favicon.png" rel="icon" />
-    <link href="styles.css" rel="stylesheet" />
+    <link href="styles.new.css" rel="stylesheet" />
     <!-- page-only styles (safe, scoped) -->
     <link href="css/who-drives.css" rel="stylesheet" />
     <link
