--- a/apply.html
+++ b/apply.html
@@ -14,7 +14,7 @@
       rel="stylesheet"
     />
     <link href="assets/favicon.png" rel="icon" />
-    <link href="styles.css" rel="stylesheet" />
+    <link href="styles.new.css" rel="stylesheet" />
     <link
       crossorigin="True"
       href="https://fonts.gstatic.com"
