--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       rel="stylesheet"
     />
     <link href="assets/favicon.png" rel="icon" />
-    <link href="styles.css" rel="stylesheet" />
+    <link href="styles.new.css" rel="stylesheet" />
   </head>
   <body class="home">
     <a class="skip-link" href="#main">Skip to content</a>
