--- a/renewal.html
+++ b/renewal.html
@@ -17,7 +17,7 @@
       rel="stylesheet"
     />
     <link href="assets/favicon.png" rel="icon" />
-    <link href="styles.css" rel="stylesheet" />
+    <link href="styles.new.css" rel="stylesheet" />
   </head>
   <body>
     <a class="skip-link" href="#main">Skip to content</a>
