fixed media range notation problem

--- a/index.html
+++ b/index.html
@@ -22,9 +22,7 @@
     <!-- Sidebar/topbar nav (shared across site) -->
     <header class="topbar">
       <div class="wrap">
-        <a class="brandlink" href="index.html">
-          <img alt="" class="mini-kymn" src="dr-kymn.png" />
-        </a>
+        <a class="brandlink" href="index.html"></a>
         <nav aria-label="Primary" class="site-nav">
           <button
             aria-controls="primary-menu"
