Fix internal links: drop -mobile suffix

--- a/after-you-apply.html
+++ b/after-you-apply.html
@@ -1,9 +1,9 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>After You Apply — Kentucky Medicaid Notebook</title>
+    <title>After You Apply â€” Kentucky Medicaid Notebook</title>
     <style>
       :root {
         --bg: #0f172a; /* slate-900 */
@@ -123,7 +123,7 @@
         <span class="chip">After You Apply</span>
         <h1 id="title">Your next steps</h1>
         <p class="lead">
-          You submitted your application. Here’s what to expect and what to do
+          You submitted your application. Hereâ€™s what to expect and what to do
           to keep things on track.
         </p>
       </header>
@@ -208,7 +208,7 @@
               href="https://kynect.ky.gov/benefits/s/medicaid-kchip-program?language=en_US"
               target="_blank"
               rel="noopener"
-              >kynect — Kentucky’s official portal</a
+              >kynect â€” Kentuckyâ€™s official portal</a
             >
           </li>
           <li>
@@ -224,7 +224,7 @@
               href="https://khbe.ky.gov/Enrollment/Pages/PHEUnwinding.aspx"
               target="_blank"
               rel="noopener"
-              >Keep coverage — notices & what to do (KHBE)</a
+              >Keep coverage â€” notices & what to do (KHBE)</a
             >
           </li>
         </ul>
