--- a/apply.html
+++ b/apply.html
@@ -1,9 +1,9 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>How to Apply — Kentucky Medicaid Notebook</title>
+    <title>How to Apply â€” Kentucky Medicaid Notebook</title>
     <style>
       :root {
         --bg: #0f172a;
@@ -100,7 +100,7 @@
         <h1>Start your application</h1>
         <p class="lead">
           You can apply for Kentucky Medicaid or KCHIP online, by phone, by
-          mail, or in person. Here’s how.
+          mail, or in person. Hereâ€™s how.
         </p>
       </header>
 
@@ -157,7 +157,7 @@
       </section>
 
       <p class="tag">
-        <strong>Tip:</strong> Have documents ready — proof of income, ID, Social
+        <strong>Tip:</strong> Have documents ready â€” proof of income, ID, Social
         Security numbers, and household information. This speeds up the process.
       </p>
     </main>
