--- a/faq.html
+++ b/faq.html
@@ -1,9 +1,9 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>FAQ — Kentucky Medicaid Notebook</title>
+    <title>FAQ â€” Kentucky Medicaid Notebook</title>
     <style>
       :root {
         --bg: #0f172a;
@@ -118,7 +118,7 @@
           <p>
             Eligibility is based on
             <strong>income, age, disability, and household size</strong>.
-            Children may qualify through <strong>KCHIP</strong>. Adults 19–64
+            Children may qualify through <strong>KCHIP</strong>. Adults 19â€“64
             may qualify if income is within limits. Seniors and people with
             disabilities may qualify through other Medicaid categories.
           </p>
@@ -143,7 +143,7 @@
             <strong
               >photo ID, Social Security numbers (if available), proof of
               income, and household info</strong
-            >. If the state needs more, they’ll request it via mail or your
+            >. If the state needs more, theyâ€™ll request it via mail or your
             kynect account.
           </p>
         </details>
@@ -158,11 +158,11 @@
         </details>
 
         <details>
-          <summary>What if I’m denied?</summary>
+          <summary>What if Iâ€™m denied?</summary>
           <p>
             You can usually <strong>appeal within 30 days</strong> (see your
             notice for instructions). You may reapply if your income or
-            household changes. See the <em>What If I’m Denied?</em> page for
+            household changes. See the <em>What If Iâ€™m Denied?</em> page for
             step-by-step guidance.
           </p>
         </details>
@@ -170,7 +170,7 @@
         <details>
           <summary>How do renewals work?</summary>
           <p>
-            Medicaid uses <strong>annual redetermination</strong>. You’ll
+            Medicaid uses <strong>annual redetermination</strong>. Youâ€™ll
             receive a renewal notice by mail or in kynect.
             <strong>Respond by the deadline</strong> to avoid a gap in coverage.
           </p>
@@ -179,14 +179,14 @@
         <details>
           <summary>How do I find a doctor who takes Medicaid?</summary>
           <p>
-            Check your plan’s provider directory and call offices to confirm
+            Check your planâ€™s provider directory and call offices to confirm
             they <strong>accept Kentucky Medicaid</strong>. Keep your
             <strong>Medicaid card</strong> with you.
           </p>
         </details>
 
         <details>
-          <summary>What should I do after I’m approved?</summary>
+          <summary>What should I do after Iâ€™m approved?</summary>
           <p>
             Check kynect for start dates, confirm your
             <strong>MCO plan</strong>, pick a
@@ -209,14 +209,14 @@
         <a href="https://kynect.ky.gov/" target="_blank" rel="noopener"
           >kynect.ky.gov</a
         >
-        ·
+        Â·
         <a
           href="https://khbe.ky.gov/Enrollment/Pages/MedicaidRenewals.aspx"
           target="_blank"
           rel="noopener"
           >Renewals</a
         >
-        ·
+        Â·
         <a
           href="https://khbe.ky.gov/FreeHelp/Pages/index.aspx"
           target="_blank"
