--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Home — Kentucky Medicaid Notebook</title>
+    <title>Home â€” Kentucky Medicaid Notebook</title>
     <style>
       :root {
         --bg: #0f172a;
@@ -108,39 +108,39 @@
       <section class="grid">
         <article class="card">
           <h3>Who Qualifies?</h3>
-          <a href="who-qualifies-mobile.html">Open</a>
+          <a href="who-qualifies.html">Open</a>
         </article>
         <article class="card">
           <h3>Who Accepts?</h3>
-          <a href="who-accepts-mobile.html">Open</a>
+          <a href="who-accepts.html">Open</a>
         </article>
         <article class="card">
           <h3>Who Drives?</h3>
-          <a href="who-drives-mobile.html">Open</a>
+          <a href="who-drives.html">Open</a>
         </article>
         <article class="card">
           <h3>How to Apply</h3>
-          <a href="apply-mobile.html">Open</a>
+          <a href="apply.html">Open</a>
         </article>
         <article class="card">
           <h3>After You Apply</h3>
-          <a href="after-you-apply-mobile.html">Open</a>
+          <a href="after-you-apply.html">Open</a>
         </article>
         <article class="card">
           <h3>Renewal</h3>
-          <a href="renewal-mobile.html">Open</a>
+          <a href="renewal.html">Open</a>
         </article>
         <article class="card">
           <h3>What If Denied?</h3>
-          <a href="what-if-denied-mobile.html">Open</a>
+          <a href="what-if-denied.html">Open</a>
         </article>
         <article class="card">
           <h3>What If Approved?</h3>
-          <a href="what-if-approved-mobile.html">Open</a>
+          <a href="what-if-approved.html">Open</a>
         </article>
         <article class="card">
           <h3>FAQ</h3>
-          <a href="faq-mobile.html">Open</a>
+          <a href="faq.html">Open</a>
         </article>
       </section>
 
