--- a/what-if-approved.html
+++ b/what-if-approved.html
@@ -1,9 +1,9 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>What If I'm Approved — Kentucky Medicaid Notebook</title>
+    <title>What If I'm Approved â€” Kentucky Medicaid Notebook</title>
     <style>
       :root {
         --bg: #0f172a;
@@ -103,9 +103,9 @@
 
       <header>
         <span class="chip">What If I'm Approved?</span>
-        <h1>Great! Here’s what you do next</h1>
+        <h1>Great! Hereâ€™s what you do next</h1>
         <p class="lead">
-          You’re approved for Kentucky Medicaid (or KCHIP). Take these quick
+          Youâ€™re approved for Kentucky Medicaid (or KCHIP). Take these quick
           steps to start using benefits smoothly.
         </p>
       </header>
@@ -134,7 +134,7 @@
         <article class="card">
           <h3>3) Pick or confirm your plan</h3>
           <p>
-            If you’re assigned a
+            If youâ€™re assigned a
             <strong>Managed Care Organization (MCO)</strong>, confirm it or
             choose a different one during the allowed window.
           </p>
@@ -143,7 +143,7 @@
         <article class="card">
           <h3>4) Find providers</h3>
           <p>
-            Use your plan’s directory to choose a
+            Use your planâ€™s directory to choose a
             <strong>primary care provider</strong> and dentist. Call ahead to
             confirm they <strong>accept Kentucky Medicaid</strong>.
           </p>
@@ -182,7 +182,7 @@
               href="https://kynect.ky.gov/benefits/s/medicaid-kchip-program?language=en_US"
               target="_blank"
               rel="noopener"
-              >kynect — Kentucky’s official portal</a
+              >kynect â€” Kentuckyâ€™s official portal</a
             >
           </li>
           <li>
