--- a/who-qualifies.html
+++ b/who-qualifies.html
@@ -1,9 +1,9 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Who Qualifies — Kentucky Medicaid Notebook</title>
+    <title>Who Qualifies â€” Kentucky Medicaid Notebook</title>
     <style>
       :root {
         --bg: #0f172a;
@@ -101,7 +101,7 @@
         <h1>Eligibility basics</h1>
         <p class="lead">
           Kentucky Medicaid and KCHIP are based on
-          <strong>income, age, disability and household size</strong>. Here’s an
+          <strong>income, age, disability and household size</strong>. Hereâ€™s an
           overview.
         </p>
       </header>
@@ -139,7 +139,7 @@
         <article class="card">
           <h3>Adults</h3>
           <p>
-            Low-income adults ages 19–64 may qualify if income is under the
+            Low-income adults ages 19â€“64 may qualify if income is under the
             limit. Coverage includes primary, emergency, and specialty care.
           </p>
         </article>
@@ -154,7 +154,7 @@
       </section>
 
       <p class="tag">
-        <strong>Tip:</strong> Use Kentucky’s official portal (<a
+        <strong>Tip:</strong> Use Kentuckyâ€™s official portal (<a
           href="https://kynect.ky.gov/"
           style="color: #93c5fd"
           >kynect.ky.gov</a
