--- a/renewal.html
+++ b/renewal.html
@@ -1,9 +1,9 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Renewal — Kentucky Medicaid Notebook</title>
+    <title>Renewal â€” Kentucky Medicaid Notebook</title>
     <style>
       :root {
         --bg: #0f172a;
@@ -108,7 +108,7 @@
         <article class="card">
           <h3>1) Watch your mail & messages</h3>
           <p>
-            You’ll get a <strong>renewal packet</strong> by mail or through
+            Youâ€™ll get a <strong>renewal packet</strong> by mail or through
             <a href="https://kynect.ky.gov/" target="_blank" rel="noopener"
               >kynect</a
             >. It may ask for updated info.
@@ -118,7 +118,7 @@
         <article class="card">
           <h3>2) Respond by the deadline</h3>
           <p>
-            If you don’t return the renewal form or requested documents, your
+            If you donâ€™t return the renewal form or requested documents, your
             coverage may end. Deadlines are usually
             <strong>30 days</strong> from the notice.
           </p>
@@ -164,7 +164,7 @@
           rel="noopener"
           >Renewals (KHBE)</a
         >
-        ·
+        Â·
         <a href="https://kynect.ky.gov/" target="_blank" rel="noopener"
           >kynect.ky.gov</a
         >
