--- a/who-accepts.html
+++ b/who-accepts.html
@@ -1,9 +1,9 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Who Accepts Medicaid — Kentucky Medicaid Notebook</title>
+    <title>Who Accepts Medicaid â€” Kentucky Medicaid Notebook</title>
     <style>
       :root {
         --bg: #0f172a;
@@ -100,7 +100,7 @@
         <h1>Finding providers that take Medicaid</h1>
         <p class="lead">
           Not every doctor, dentist, or hospital accepts Kentucky Medicaid.
-          Here’s how to check before your visit.
+          Hereâ€™s how to check before your visit.
         </p>
       </header>
 
@@ -108,7 +108,7 @@
         <article class="card">
           <h3>1) Use your MCO directory</h3>
           <p>
-            If you’re enrolled in a
+            If youâ€™re enrolled in a
             <strong>Managed Care Organization (MCO)</strong>, each plan has its
             own online provider directory. Search for doctors, dentists,
             specialists, or hospitals near you.
@@ -118,7 +118,7 @@
         <article class="card">
           <h3>2) Call ahead</h3>
           <p>
-            Always call the provider’s office to confirm they
+            Always call the providerâ€™s office to confirm they
             <strong>accept Kentucky Medicaid</strong> (and your MCO, if
             applicable). Policies can change.
           </p>
@@ -151,7 +151,7 @@
       </section>
 
       <p class="tag">
-        <strong>Tip:</strong> Start with your MCO’s member services number (on
+        <strong>Tip:</strong> Start with your MCOâ€™s member services number (on
         the back of your Medicaid card) for help finding in-network providers.
       </p>
     </main>
