Fix dash encoding in titles

--- a/faq.html
+++ b/faq.html
@@ -118,7 +118,7 @@
           <p>
             Eligibility is based on
             <strong>income, age, disability, and household size</strong>.
-            Children may qualify through <strong>KCHIP</strong>. Adults 19â€“64
+            Children may qualify through <strong>KCHIP</strong>. Adults 19&ndash;64
             may qualify if income is within limits. Seniors and people with
             disabilities may qualify through other Medicaid categories.
           </p>
