--- a/who-qualifies.html
+++ b/who-qualifies.html
@@ -139,7 +139,7 @@
         <article class="card">
           <h3>Adults</h3>
           <p>
-            Low-income adults ages 19â€“64 may qualify if income is under the
+            Low-income adults ages 19&ndash;64 may qualify if income is under the
             limit. Coverage includes primary, emergency, and specialty care.
           </p>
         </article>
