Fix encoding repo-wide: replace mojibake with HTML entities and enforce UTF-8

--- a/apply.html
+++ b/apply.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="utf-8" />
@@ -100,7 +100,7 @@
         <h1>Start your application</h1>
         <p class="lead">
           You can apply for Kentucky Medicaid or KCHIP online, by phone, by
-          mail, or in person. Hereâ€™s how.
+          mail, or in person. Here&rsquo;s how.
         </p>
       </header>
 
