--- a/faq.html
+++ b/faq.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="utf-8" />
@@ -143,7 +143,7 @@
             <strong
               >photo ID, Social Security numbers (if available), proof of
               income, and household info</strong
-            >. If the state needs more, theyâ€™ll request it via mail or your
+            >. If the state needs more, they&rsquo;ll request it via mail or your
             kynect account.
           </p>
         </details>
@@ -158,11 +158,11 @@
         </details>
 
         <details>
-          <summary>What if Iâ€™m denied?</summary>
+          <summary>What if I&rsquo;m denied?</summary>
           <p>
             You can usually <strong>appeal within 30 days</strong> (see your
             notice for instructions). You may reapply if your income or
-            household changes. See the <em>What If Iâ€™m Denied?</em> page for
+            household changes. See the <em>What If I&rsquo;m Denied?</em> page for
             step-by-step guidance.
           </p>
         </details>
@@ -170,7 +170,7 @@
         <details>
           <summary>How do renewals work?</summary>
           <p>
-            Medicaid uses <strong>annual redetermination</strong>. Youâ€™ll
+            Medicaid uses <strong>annual redetermination</strong>. You&rsquo;ll
             receive a renewal notice by mail or in kynect.
             <strong>Respond by the deadline</strong> to avoid a gap in coverage.
           </p>
@@ -179,14 +179,14 @@
         <details>
           <summary>How do I find a doctor who takes Medicaid?</summary>
           <p>
-            Check your planâ€™s provider directory and call offices to confirm
+            Check your plan&rsquo;s provider directory and call offices to confirm
             they <strong>accept Kentucky Medicaid</strong>. Keep your
             <strong>Medicaid card</strong> with you.
           </p>
         </details>
 
         <details>
-          <summary>What should I do after Iâ€™m approved?</summary>
+          <summary>What should I do after I&rsquo;m approved?</summary>
           <p>
             Check kynect for start dates, confirm your
             <strong>MCO plan</strong>, pick a
