--- a/renewal.html
+++ b/renewal.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="utf-8" />
@@ -108,7 +108,7 @@
         <article class="card">
           <h3>1) Watch your mail & messages</h3>
           <p>
-            Youâ€™ll get a <strong>renewal packet</strong> by mail or through
+            You&rsquo;ll get a <strong>renewal packet</strong> by mail or through
             <a href="https://kynect.ky.gov/" target="_blank" rel="noopener"
               >kynect</a
             >. It may ask for updated info.
@@ -118,7 +118,7 @@
         <article class="card">
           <h3>2) Respond by the deadline</h3>
           <p>
-            If you donâ€™t return the renewal form or requested documents, your
+            If you don&rsquo;t return the renewal form or requested documents, your
             coverage may end. Deadlines are usually
             <strong>30 days</strong> from the notice.
           </p>
