--- a/what-if-approved.html
+++ b/what-if-approved.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="utf-8" />
@@ -103,9 +103,9 @@
 
       <header>
         <span class="chip">What If I'm Approved?</span>
-        <h1>Great! Hereâ€™s what you do next</h1>
+        <h1>Great! Here&rsquo;s what you do next</h1>
         <p class="lead">
-          Youâ€™re approved for Kentucky Medicaid (or KCHIP). Take these quick
+          You&rsquo;re approved for Kentucky Medicaid (or KCHIP). Take these quick
           steps to start using benefits smoothly.
         </p>
       </header>
@@ -134,7 +134,7 @@
         <article class="card">
           <h3>3) Pick or confirm your plan</h3>
           <p>
-            If youâ€™re assigned a
+            If you&rsquo;re assigned a
             <strong>Managed Care Organization (MCO)</strong>, confirm it or
             choose a different one during the allowed window.
           </p>
@@ -143,7 +143,7 @@
         <article class="card">
           <h3>4) Find providers</h3>
           <p>
-            Use your planâ€™s directory to choose a
+            Use your plan&rsquo;s directory to choose a
             <strong>primary care provider</strong> and dentist. Call ahead to
             confirm they <strong>accept Kentucky Medicaid</strong>.
           </p>
@@ -182,7 +182,7 @@
               href="https://kynect.ky.gov/benefits/s/medicaid-kchip-program?language=en_US"
               target="_blank"
               rel="noopener"
-              >kynect â€” Kentuckyâ€™s official portal</a
+              >kynect â€” Kentucky&rsquo;s official portal</a
             >
           </li>
           <li>
