--- a/what-if-denied.html
+++ b/what-if-denied.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="utf-8" />
@@ -96,7 +96,7 @@
         <span class="chip">What If I'm Denied?</span>
         <h1>Next steps if you get a denial</h1>
         <p class="lead">
-          Donâ€™t panic â€” a denial doesnâ€™t always mean the end. You have rights to
+          Don&rsquo;t panic â€” a denial doesn&rsquo;t always mean the end. You have rights to
           appeal and other coverage options to explore.
         </p>
       </header>
@@ -139,7 +139,7 @@
         <article class="card">
           <h3>Explore other options</h3>
           <p>
-            Even if Medicaid isnâ€™t available, you may qualify for
+            Even if Medicaid isn&rsquo;t available, you may qualify for
             <strong
               >KCHIP, Marketplace coverage with subsidies, or other state
               programs</strong
