--- a/who-accepts.html
+++ b/who-accepts.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="utf-8" />
@@ -100,7 +100,7 @@
         <h1>Finding providers that take Medicaid</h1>
         <p class="lead">
           Not every doctor, dentist, or hospital accepts Kentucky Medicaid.
-          Hereâ€™s how to check before your visit.
+          Here&rsquo;s how to check before your visit.
         </p>
       </header>
 
@@ -108,7 +108,7 @@
         <article class="card">
           <h3>1) Use your MCO directory</h3>
           <p>
-            If youâ€™re enrolled in a
+            If you&rsquo;re enrolled in a
             <strong>Managed Care Organization (MCO)</strong>, each plan has its
             own online provider directory. Search for doctors, dentists,
             specialists, or hospitals near you.
@@ -118,7 +118,7 @@
         <article class="card">
           <h3>2) Call ahead</h3>
           <p>
-            Always call the providerâ€™s office to confirm they
+            Always call the provider&rsquo;s office to confirm they
             <strong>accept Kentucky Medicaid</strong> (and your MCO, if
             applicable). Policies can change.
           </p>
@@ -151,7 +151,7 @@
       </section>
 
       <p class="tag">
-        <strong>Tip:</strong> Start with your MCOâ€™s member services number (on
+        <strong>Tip:</strong> Start with your MCO&rsquo;s member services number (on
         the back of your Medicaid card) for help finding in-network providers.
       </p>
     </main>
