--- a/who-qualifies.html
+++ b/who-qualifies.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="utf-8" />
@@ -101,7 +101,7 @@
         <h1>Eligibility basics</h1>
         <p class="lead">
           Kentucky Medicaid and KCHIP are based on
-          <strong>income, age, disability and household size</strong>. Hereâ€™s an
+          <strong>income, age, disability and household size</strong>. Here&rsquo;s an
           overview.
         </p>
       </header>
@@ -154,7 +154,7 @@
       </section>
 
       <p class="tag">
-        <strong>Tip:</strong> Use Kentuckyâ€™s official portal (<a
+        <strong>Tip:</strong> Use Kentucky&rsquo;s official portal (<a
           href="https://kynect.ky.gov/"
           style="color: #93c5fd"
           >kynect.ky.gov</a
