--- a/after-you-apply.html
+++ b/after-you-apply.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="utf-8" />
@@ -123,7 +123,7 @@
         <span class="chip">After You Apply</span>
         <h1 id="title">Your next steps</h1>
         <p class="lead">
-          You submitted your application. Hereâ€™s what to expect and what to do
+          You submitted your application. Here&rsquo;s what to expect and what to do
           to keep things on track.
         </p>
       </header>
@@ -208,7 +208,7 @@
               href="https://kynect.ky.gov/benefits/s/medicaid-kchip-program?language=en_US"
               target="_blank"
               rel="noopener"
-              >kynect â€” Kentuckyâ€™s official portal</a
+              >kynect â€” Kentucky&rsquo;s official portal</a
             >
           </li>
           <li>
