--- a/what-if-approved.html
+++ b/what-if-approved.html
@@ -3,7 +3,241 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>
+    $val = <!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>What If I'm Approved â€” Kentucky Medicaid Notebook</title>
+    <style>
+      :root {
+        --bg: #0f172a;
+        --card: #111827;
+        --ink: #e5e7eb;
+        --muted: #94a3b8;
+        --accent: #22c55e; /* green for approved */
+        --ring: #334155;
+      }
+      * {
+        box-sizing: border-box;
+      }
+      body {
+        margin: 0;
+        background: var(--bg);
+        color: var(--ink);
+        font: 16px/1.5 system-ui, -apple-system, Segoe UI, Roboto, Arial,
+          sans-serif;
+      }
+      .wrap {
+        max-width: 720px;
+        margin: 0 auto;
+        padding: 20px;
+      }
+      .logo {
+        text-align: center;
+        margin-bottom: 18px;
+      }
+      .logo img {
+        max-width: 120px;
+        height: auto;
+        filter: drop-shadow(0 6px 12px rgba(0, 0, 0, 0.35));
+      }
+      header h1 {
+        font-size: 26px;
+        margin: 6px 0 4px;
+      }
+      header p.lead {
+        color: var(--muted);
+        margin: 0 0 14px;
+      }
+      .tag {
+        color: var(--muted);
+        font-size: 14px;
+        margin: 2px 0 14px;
+      }
+      .grid {
+        display: grid;
+        grid-template-columns: 1fr;
+        gap: 12px;
+      }
+      .card {
+        background: var(--card);
+        border: 1px solid var(--ring);
+        border-radius: 14px;
+        padding: 14px;
+        box-shadow: 0 1px 0 rgba(0, 0, 0, 0.3), 0 8px 24px rgba(0, 0, 0, 0.25);
+      }
+      .card h3 {
+        margin: 4px 0 6px;
+        font-size: 18px;
+        color: #86efac;
+      }
+      .chip {
+        display: inline-block;
+        font-weight: 700;
+        font-size: 12px;
+        letter-spacing: 0.02em;
+        padding: 4px 8px;
+        border-radius: 999px;
+        background: rgba(34, 197, 94, 0.15);
+        color: #86efac;
+        border: 1px solid rgba(34, 197, 94, 0.35);
+      }
+      footer {
+        color: var(--muted);
+        font-size: 13px;
+        padding: 24px 20px 36px;
+        text-align: center;
+      }
+      a {
+        color: #93c5fd;
+      }
+      .divider {
+        height: 1px;
+        background: var(--ring);
+        margin: 16px 0;
+        border-radius: 1px;
+      }
+    </style>
+  </head>
+  <body>
+    <main class="wrap">
+      <div class="logo">
+        <img src="dr-kymn.png" alt="Dr. KYMN mascot" />
+      </div>
+
+      <header>
+        <span class="chip">What If I'm Approved?</span>
+        <h1>Great! Here&rsquo;s what you do next</h1>
+        <p class="lead">
+          You&rsquo;re approved for Kentucky Medicaid (or KCHIP). Take these quick
+          steps to start using benefits smoothly.
+        </p>
+      </header>
+
+      <section class="grid">
+        <article class="card">
+          <h3>1) Watch for your card</h3>
+          <p>
+            Your <strong>Medicaid ID card</strong> may arrive after the approval
+            notice. Keep both in a safe place.
+          </p>
+        </article>
+
+        <article class="card">
+          <h3>2) Create/confirm your account</h3>
+          <p>
+            Log in to
+            <a href="https://kynect.ky.gov/" target="_blank" rel="noopener"
+              >kynect</a
+            >
+            to review messages, coverage start dates, and managed care plan
+            info.
+          </p>
+        </article>
+
+        <article class="card">
+          <h3>3) Pick or confirm your plan</h3>
+          <p>
+            If you&rsquo;re assigned a
+            <strong>Managed Care Organization (MCO)</strong>, confirm it or
+            choose a different one during the allowed window.
+          </p>
+        </article>
+
+        <article class="card">
+          <h3>4) Find providers</h3>
+          <p>
+            Use your plan&rsquo;s directory to choose a
+            <strong>primary care provider</strong> and dentist. Call ahead to
+            confirm they <strong>accept Kentucky Medicaid</strong>.
+          </p>
+        </article>
+
+        <article class="card">
+          <h3>5) Bring your card to visits</h3>
+          <p>
+            Show your <strong>Medicaid ID card</strong> at appointments and
+            pharmacies. Ask about any copays or prior authorization needs.
+          </p>
+        </article>
+
+        <article class="card">
+          <h3>6) Keep info current</h3>
+          <p>
+            Report changes to
+            <strong>address, phone, income, household</strong> right away in
+            kynect to avoid coverage interruptions.
+          </p>
+        </article>
+      </section>
+
+      <div class="divider"></div>
+
+      <section>
+        <h2
+          class="tag"
+          style="font-size: 16px; color: #cbd5e1; margin-bottom: 8px"
+        >
+          Helpful links
+        </h2>
+        <ul style="margin: 0; padding-left: 18px">
+          <li>
+            <a
+              href="https://kynect.ky.gov/benefits/s/medicaid-kchip-program?language=en_US"
+              target="_blank"
+              rel="noopener"
+              >kynect â€” Kentucky&rsquo;s official portal</a
+            >
+          </li>
+          <li>
+            <a
+              href="https://khbe.ky.gov/Enrollment/Pages/MedicaidRenewals.aspx"
+              target="_blank"
+              rel="noopener"
+              >Medicaid renewals & contact updates (KHBE)</a
+            >
+          </li>
+          <li>
+            <a
+              href="https://khbe.ky.gov/FreeHelp/Pages/index.aspx"
+              target="_blank"
+              rel="noopener"
+              >Find free local help (kynectors)</a
+            >
+          </li>
+        </ul>
+      </section>
+    </main>
+
+    <footer>
+      <p>
+        <strong>Dr. KYMN</strong> is a friendly guide, not a medical doctor. Not
+        affiliated with any agency. Made in Lexington, KY, by <br />
+        <a
+          href="https://sleepingbear.us/"
+          target="_blank"
+          rel="noopener"
+          style="color: #93c5fd"
+        >
+          Sleeping Bear Labs
+        </a>
+      </p>
+    </footer>
+  </body>
+</html>
+.Groups[1].Value
+    $val = $val -replace $patNdash,  "–"
+    $val = $val -replace $patMdash,  "—"
+    $val = $val -replace $patRsquo,  "’"
+    $val = $val -replace $patLsquo,  "‘"
+    $val = $val -replace $patLdquo,  "“"
+    $val = $val -replace $patRdquo,  "”"
+    $val = $val -replace $patHellip, "…"
+    $val = $val -replace $patBull,   "•"
+    return $val
+  </title>
     <style>
       :root {
         --bg: #0f172a;
