chore: fixed header code and updated title tags.

--- a/what-if-denied.html
+++ b/what-if-denied.html
@@ -3,13 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>
-    $val = <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>What If I'm Denied â€” Kentucky Medicaid Notebook</title>
+    <title>What If I'm Denied? | Kentucky Medicaid Notebook</title>
     <style>
       :root {
         --bg: #0f172a;
