--- a/apply.html
+++ b/apply.html
@@ -9,7 +9,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>How to Apply â€” Kentucky Medicaid Notebook</title>
+    <title>How to Apply | Kentucky Medicaid Notebook</title>
     <style>
       :root {
         --bg: #0f172a;
