--- a/index.html
+++ b/index.html
@@ -3,13 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>
-    $val = <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Home â€” Kentucky Medicaid Notebook</title>
+    <title>Home | Kentucky Medicaid Notebook</title>
     <style>
       :root {
         --bg: #0f172a;
