--- a/who-qualifies.html
+++ b/who-qualifies.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Who Qualifies â€” Kentucky Medicaid Notebook</title>
+    <title>Who Qualifies? | Kentucky Medicaid Notebook</title>
     <style>
       :root {
         --bg: #0f172a;
